--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -2,11 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="using:DubClubTracker.ViewModels"
              x:Class="DubClubTracker.Views.LoginView"
-             x:DataType="vm:LoginViewModel">
-    <UserControl.DataContext>
-        <vm:LoginViewModel/>
-    </UserControl.DataContext>
-    
+             x:DataType="vm:MainWindowViewModel">
     <StackPanel>
         <TextBlock Text="Welcome to DubClubTracker!" 
                 HorizontalAlignment="Center" 
@@ -17,11 +13,13 @@
                 FontSize="16" 
                 Margin="0,10,0,0"/>
         <TextBox Name="Username"
-                Watermark="Username" 
+                Watermark="Username"
+                Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                 Margin="20,10,20,0" 
                 VerticalAlignment="Top"/>        
         <TextBox Name="Password"
                 Watermark="Password" 
+                Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 Margin="20,10,20,0" 
                 VerticalAlignment="Top" 
                 PasswordChar="*"/>
