--- a/Views/ProfileView.axaml
+++ b/Views/ProfileView.axaml
@@ -1,9 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="DubClubTracker.ViewModels"
+             xmlns:vm="clr-namespace:DubClubTracker.ViewModels"
              x:Class="DubClubTracker.Views.ProfileView"
              x:DataType="vm:ProfileViewModel" >
-
+    
     <StackPanel>
         <Image 
             Source="{Binding ProfileImage}"
@@ -13,18 +13,22 @@
             Height="400"/>
 
         <TextBox
-            Name="LastName"
-            Watermark="Last Name"
-            Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            Margin="20,10,20,0"
-            VerticalAlignment="Top"/>
-        <TextBox
             Name="FirstName"
             Watermark="First Name"
             Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             Margin="20,10,20,0"
             VerticalAlignment="Top"/>
 
+        <TextBox
+            Name="LastName"
+            Watermark="Last Name"
+            Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            Margin="20,10,20,0"
+            VerticalAlignment="Top"/>
+        <Label
+            Content="{Binding SuccessMessage}"
+            Margin="20,10,20,0"
+            VerticalAlignment="Top"/>
         <Button
             Name="SaveButton"
             Content="Save"
